Moved Zac's changes + fixed whitespace

--- a/iboost-pages/styles.css
+++ b/iboost-pages/styles.css
@@ -1,5 +1,4 @@
 #sidenav {
-	max-width: 16em;
 	position: -webkit-sticky;
 	position: sticky;
 	top: 0;
@@ -19,6 +18,7 @@ body {
 	#sidenav {
 		display: none;
 	}
+
 	body::before {
 		display: block;
 		content: "";
